# homebrew-lenet5

./: ConvNet.sln
ConvNet/: .FullyConnectedLayer.cpp.swp  .FullyConnectedLayer.h.swp  .gitignore  CMakeLists.txt  CMakeListsNC.txt  CNN.cpp  CNN.h  ConvLayer.cpp  ConvLayer.h  ConvNet.cpp  ConvNet.vcxproj  ConvNet.vcxproj.filters  FullyConnectedLayer.cpp  FullyConnectedLayer.h  OutputLayer.cpp  OutputLayer.h  SamplingLayer.cpp  SamplingLayer.h  resource.h
